--- a/src/app.scss
+++ b/src/app.scss
@@ -7,6 +7,8 @@
     background-color: lightsalmon;
     position: relative;
     top: 70px;
+    scroll-behavior: smooth;
+
     scroll-snap-type: y mandatory;
     scrollbar-width: none; //for firefox
     &::-webkit-scrollbar{
