--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,5 @@
+@import "../src/global.scss";
+
 .app {
   height: 100vh;
 
@@ -8,7 +10,6 @@
     position: relative;
     top: 70px;
     scroll-behavior: smooth;
-
     scroll-snap-type: y mandatory;
     scrollbar-width: none; //for firefox
     &::-webkit-scrollbar{
