--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -4,10 +4,10 @@
   width: 100%;
   height: 70px;
   background-color: white;
-  color: $maincolor;
+  color: $mainColor;
   position: fixed;
   top: 0;
-  z-index: 2;
+  z-index: 3;
   transition: all 1s ease;
 
   .wrapper {
@@ -27,11 +27,12 @@
         color: inherit;
         margin-right: 40px;
       }
+
       .itemContainer {
         display: flex;
         align-items: center;
         margin-left: 30px;
-        
+
         .icon {
           font-size: 18px;
           margin-right: 5px;
@@ -40,6 +41,44 @@
         span {
           font-size: 15px;
           font-weight: 700;
+        }
+      }
+    }
+    .right {
+      .hamburger {
+        width: 32px;
+        height: 25px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        cursor: pointer;
+
+        span {
+          width: 100%;
+          height: 3px;
+          background-color: $mainColor;
+          transform-origin: left;
+          transition: all 1s ease;
+        }
+      }
+    }
+  }
+  &.active {
+    background-color: $mainColor;
+    color: white;
+
+    .hamburger {
+      span {
+        &:first-child {
+          background-color: white;
+          transform: rotate(45deg);
+        }
+        &:nth-child(2) {
+          opacity: 0;
+        }
+        &:last-child {
+          background-color: white;
+          transform: rotate(-45deg);
         }
       }
     }
