--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,3 +1,88 @@
-.contact{
-    background-color:lightcoral;
+@import "../../global.scss";
+
+.contact {
+  background-color: white;
+  display: flex;
+
+
+  .left {
+    flex: 1;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      height: 40%;
+      padding: 10px;
+      margin: 5px;
+    }
+  }
+  .right {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    h2 {
+      font-size: 30px;
+      margin: 10px;
+    }
+
+    form {
+      width: 70%;
+      height: 70%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 10px;
+
+
+      input {
+        width: 300px;
+        height: 30px;
+        font-size: 14px;
+        margin: 5px;
+        border: 1px solid black;
+        border-radius: 10px;
+
+      }
+
+      textarea {
+        width: 250px;
+        height: 200px;
+        font-size: 14px;
+        margin: 10px;
+        padding: 10px;
+        border: 1px solid black;
+        border-radius: 12px;
+
+
+
+      }
+      button {
+        width: 150px;
+        height: 30px;
+        color: white;
+        background-color: crimson;
+        border-radius: 10px;
+        font-weight: 500;
+        cursor: pointer;
+
+        &:focus {
+          outline: none;
+        }
+      }
+
+      span {
+        color: green;
+      }
+    }
+  }
+}
+
+p {
+  text-align: center;
 }
