--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -6,11 +6,15 @@
   flex-direction: column;
   align-items: center;
 
-
+  @include mobile {
+   justify-content: space-evenly;
+  }
 
   h1 {
     font-size: 50px;
-
+    @include mobile {
+      font-size: 20px;
+    }
   }
 
   .container {
@@ -20,7 +24,10 @@
     align-items: center;
     justify-content: center;
 
-
+    @include mobile {
+      flex-direction: column;
+      height: 90%;
+    }
 
     .card {
       width: 250px;
@@ -34,13 +41,21 @@
       transition: all 1s ease;
       margin:0px 20px;
 
+      @include mobile {
+        height: 180px;
+        margin:5px 0px;
+      }
 
       &.featured {
         width: 300px;
         height: 75%;
         margin: 0 30px;
 
-  
+        @include mobile {
+          width: 250px;
+          height: 180px;
+          margin: 10px;
+        }
       }
 
       &:hover {
@@ -64,7 +79,10 @@
             object-fit: cover;
             margin: 0 30px;
 
-        
+            @include mobile {
+              width: 30px;
+              height: 30px;
+            }
           }
         }
       }
@@ -74,7 +92,10 @@
         border-radius: 10px;
         background-color: rgb(250, 244, 245);
 
-   
+        @include mobile {
+          font-size: 12px;
+          padding: 5px;
+        }
       }
       .bottom {
         display: flex;
@@ -84,11 +105,15 @@
 
         h3 {
           margin-bottom: 5px;
-      
+          @include mobile {
+            font-size: 14px;
+          }
         }
         h4 {
           color: rgb(121, 115, 115);
-      
+          @include mobile {
+            font-size: 13px;
+          }
         }
       }
     }
