--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -26,12 +26,28 @@
         text-decoration: none;
         color: inherit;
         margin-right: 40px;
+
+        img{
+          height:15vw;
+          display: flex;
+          align-items: center;
+        }
+
+
+        @include mobile {
+          font-size: 30px;
+      }
+
       }
 
       .itemContainer {
         display: flex;
         align-items: center;
         margin-left: 30px;
+
+        @include mobile {
+          display: none;
+        }
 
         .icon {
           font-size: 18px;
