--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -12,6 +12,9 @@
     position: absolute;
     cursor: pointer;
 
+    @include mobile {
+      display: none;
+    }
 
     &.left {
       left: 50px;
@@ -30,13 +33,26 @@
     left: -0;
     transition: all 1s ease-out;
 
+    @include mobile {
+      height: 150vw;
+      flex-direction: column;
+      justify-content: space-evenly;
+    }
     .container {
       width: 100vw;
       display: flex;
       align-items: center;
       justify-content: center;
 
-   
+      @include mobile {
+        margin: 10px;
+        width: 95vw;
+        height: 180px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-between;
+      }
 
       .item {
         width: 700px;
@@ -47,7 +63,10 @@
         align-items: center;
         justify-content: center;
 
-     
+        @include mobile {
+          width: 90%;
+          height: 190px;
+        }
 
         .left {
           flex: 4;
@@ -56,7 +75,10 @@
           align-items: center;
           justify-content: center;
 
-     
+          @include mobile {
+            flex: 5;
+            height: 100%;
+          }
 
           .leftContainer {
             width: 90%;
@@ -74,18 +96,27 @@
               align-items: center;
               justify-content: center;
 
+              @include mobile {
+                height: 20%;
+                width: 20%;
+              }
+
               img {
                 width: 25px;
               }
             }
             h2 {
               font-size: 20px;
-       
+              @include mobile {
+                font-size: 14px;
+              }
             }
             p {
               font-size: 13px;
               overflow: hidden;
-        
+              @include mobile {
+               display:none;
+              }
             }
             span {
               font-size: 12px;
@@ -103,6 +134,10 @@
           align-items: center;
           justify-content: center;
           overflow: hidden;
+
+          @include mobile {
+            flex: 6;
+          }
 
           img {
             width: 350px;
