css for tablet added

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -7,12 +7,19 @@
   @include mobile {
     flex-direction: column;
   }
+  @include tablet {
+    flex-direction: column;
+  }
+
   .left {
     flex: 1;
     overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
+    @include tablet {
+      flex: 1;
+    }
 
     img {
       height: 40%;
@@ -26,10 +33,22 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    @include tablet {
+      flex: 2;
+    }
 
     h2 {
       font-size: 30px;
       margin: 10px;
+      @include tablet {
+        font-size: 2.4rem;
+      }
+    }
+    p {
+      text-align: center;
+      @include tablet {
+        font-size: 1.4rem;
+      }
     }
 
     form {
@@ -41,7 +60,6 @@
       justify-content: center;
       padding: 10px;
 
-
       input {
         width: 300px;
         height: 30px;
@@ -50,10 +68,14 @@
         border: 1px solid black;
         border-radius: 10px;
 
-
         @include mobile {
           width: 220px;
           height: 20px;
+        }
+        @include tablet {
+          width: 250px;
+          height: 30px;
+          font-size: 1rem;
         }
       }
 
@@ -66,10 +88,12 @@
         border: 1px solid black;
         border-radius: 12px;
 
-
         @include mobile {
           width: 220px;
           height: 100px;
+        }
+        @include tablet {
+          width: 250px;
         }
       }
       button {
@@ -80,6 +104,12 @@
         border-radius: 10px;
         font-weight: 500;
         cursor: pointer;
+        margin-bottom: 10px;
+        @include tablet {
+            font-size: 1.4rem;
+            height: 50px;
+          }
+    
 
         &:focus {
           outline: none;
@@ -91,8 +121,4 @@
       }
     }
   }
-}
-
-p {
-  text-align: center;
 }
