--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -8,6 +8,10 @@
     flex-direction: column;
     align-items: center;
   }
+  @include tablet {
+    flex-direction: column;
+    align-items: center;
+  }
 
   .left {
     flex: 0.5;
@@ -24,17 +28,22 @@
       float: right;
 
       @include mobile {
-          align-items: flex-start;
+        align-items: flex-start;
+      }
+      @include tablet {
+        margin-top: 50px;
       }
 
       img {
         height: 90%;
 
         @include mobile {
-            height: 60%;
+          height: 60%;
         }
-
-      
+        @include tablet {
+          height: 90%;
+          padding-bottom: 40px;
+        }
       }
     }
   }
@@ -52,8 +61,12 @@
       justify-content: center;
 
       @include mobile {
-          padding-left: 0;
-          align-items: center;
+        padding-left: 0;
+        align-items: center;
+      }
+      @include tablet {
+        padding-left: 0;
+        align-items: center;
       }
 
       h1 {
@@ -61,26 +74,22 @@
         margin: 10px 0;
 
         @include mobile {
-            font-size: 30px;
+          font-size: 30px;
         }
-    
       }
       h2 {
         font-size: 35px;
-        
+
         @include mobile {
-            font-size: 30px;
+          font-size: 30px;
         }
-   
       }
       h3 {
         font-size: 30px;
 
         @include mobile {
-            font-size: 20px;
+          font-size: 20px;
         }
-
-   
 
         span {
           font-size: inherit;
