--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -9,6 +9,10 @@
 
   h1 {
     font-size: 50px;
+
+    @include mobile {
+      font-size: 20px;
+    }
   }
 
   ul {
@@ -16,6 +20,12 @@
     padding: 0;
     list-style: none;
     display: flex;
+
+    @include mobile {
+      margin: 20px 0;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
   }
 
   .container {
@@ -25,6 +35,10 @@
     justify-content: center;
     flex-wrap: wrap;
     margin-bottom: 80px;
+
+    @include mobile {
+      width: 100%;
+    }
 
     .item {
       width: 220px;
@@ -38,8 +52,12 @@
       position: relative;
       transition: all 0.5s ease;
       cursor: pointer;
+      //h3 absolute olması için parent relative olmalı
 
-
+      @include mobile {
+        width: 130px;
+        height: 100px;
+      }
       h3 {
         position: absolute;
         font-size: 20px;
