--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -7,8 +7,12 @@
   align-items: center;
 
   @include mobile {
-   justify-content: space-evenly;
+    justify-content: space-evenly;
   }
+  @include tablet {
+width: 80%;
+}
+
 
   h1 {
     font-size: 50px;
@@ -28,6 +32,10 @@
       flex-direction: column;
       height: 90%;
     }
+    @include tablet {
+      flex-direction: column;
+      margin: auto;
+    }
 
     .card {
       width: 250px;
@@ -39,12 +47,17 @@
       justify-content: space-around;
       padding: 20px;
       transition: all 1s ease;
-      margin:0px 20px;
+      margin: 0px 20px;
 
       @include mobile {
         height: 180px;
-        margin:5px 0px;
+        margin: 5px 0px;
       }
+      @include tablet {
+margin: 20px;
+width: 70%;
+    }
+
 
       &.featured {
         width: 300px;
@@ -56,6 +69,10 @@
           height: 180px;
           margin: 10px;
         }
+        @include tablet {
+width: 55%;
+        }
+
       }
 
       &:hover {
